[package]
name = "retro-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "libretro"
path = "src/libretro/mod.rs"

[[bin]]
name = "retro"
path = "src/main.rs"

[dependencies]
retro-derive = { path = "derive" }
env_logger = "0.11.8"
log = "0.4.27"
num-traits = "0.2.19"
memmap2 = "0.9.7"
bitmatch = "0.1.1"
rstest = "0.26.1"
syn = "2.0.106"
pixels = "0.15.0"
tao = "0.34.3"
clap = { version = "4.5.45", features = ["derive"] }
