[package]
name = "retro-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "libretro"
path = "src/libretro/mod.rs"

[[bin]]
name = "retro"
path = "src/main.rs"

[dependencies]
#retro-derive = { path = "derive" }
env_logger = "0.11.8"
log = "0.4.27"
memmap2 = "0.9.7"
bitmatch = "0.1.1"
rstest = "0.26.1"
pixels = "0.15.0"
tao = "0.34.3"
clap = { version = "4.5.45", features = ["derive"] }
shellexpand = { version = "3.1.1", features = ["path", "os_str_bytes", "full"] }
ctrlc = "3.5.0"
